--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,6 +17,9 @@
       "dom"
     ],
     "module": "es2015",
-    "baseUrl": "./"
+    "baseUrl": "src",
+    "paths": {
+      "@app/*": [ "app/*" ],
+    }
   }
 }
