--- a/angular.json
+++ b/angular.json
@@ -42,6 +42,14 @@
                   "with": "src/environments/environment.prod.ts"
                 }
               ]
+            },
+            "hmr": {
+              "fileReplacements": [
+                {
+                  "replace": "src/environments/environment.ts",
+                  "with": "src/environments/environment.hmr.ts"
+                }
+              ]
             }
           }
         },
@@ -53,6 +61,9 @@
           "configurations": {
             "production": {
               "browserTarget": "taobao:build:production"
+            },
+            "hmr": {
+              "browserTarget": "taobao:build:hmr"
             }
           }
         },
